--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-1-modul\
-2-modul(Основы)\Некстеров-Никита-2-модуль(Основы).7z
-3-modul\Модуль-3-Задача.7z
-3-modul\Ответы на вопросы
-Свои заметки
+/1-modul/
+*.7z
+*.txt
